[gd_scene load_steps=5 format=3 uid="uid://d0hedq15bw08o"]

[ext_resource type="Script" path="res://scenes/win_screen.gd" id="1_qhd7r"]
[ext_resource type="PackedScene" uid="uid://b4faefksbyv0v" path="res://scenes/background.tscn" id="1_tdupq"]

[sub_resource type="SystemFont" id="SystemFont_sfabh"]
font_names = PackedStringArray("Fira Sans")
font_weight = 475

[sub_resource type="SystemFont" id="SystemFont_8c37j"]
font_names = PackedStringArray("JetBrainsMonoNL Nerd Font")

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qhd7r")
winner_id = 1

[node name="Background" parent="." instance=ExtResource("1_tdupq")]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 96.0
offset_right = 624.0
offset_bottom = 248.0
color = Color(0.389144, 0.159691, 0.14096, 1)

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_top = -16.0
offset_right = 608.0
offset_bottom = 136.0
color = Color(0, 0.313726, 0.345098, 1)

[node name="PlayerLabel" type="Label" parent="ColorRect/ColorRect2"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -480.0
offset_bottom = 140.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.356863, 0.8, 0.827451, 1)
theme_override_constants/outline_size = 35
theme_override_fonts/font = SubResource("SystemFont_sfabh")
theme_override_font_sizes/font_size = 116
text = "Player X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 408.0
offset_top = 304.0
offset_right = 1080.0
offset_bottom = 408.0
color = Color(0.389144, 0.159691, 0.14096, 1)

[node name="ColorRect3" type="ColorRect" parent="ColorRect2"]
layout_mode = 0
offset_left = -16.0
offset_top = -16.0
offset_right = 672.0
offset_bottom = 88.0
color = Color(0, 0.313726, 0.345098, 1)

[node name="Label" type="Label" parent="ColorRect2/ColorRect3"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -36.0
offset_right = 496.0
offset_bottom = 39.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.356863, 0.8, 0.827451, 1)
theme_override_constants/outline_size = 22
theme_override_fonts/font = SubResource("SystemFont_sfabh")
theme_override_font_sizes/font_size = 62
text = "Congratulations!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -312.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 100

[node name="Button" type="Button" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = SubResource("SystemFont_8c37j")
theme_override_font_sizes/font_size = 42
text = "Next Game"

[connection signal="button_up" from="MarginContainer/Button" to="." method="_on_button_button_up"]
